# template

./: README.md  cookiecutter.json
backend/: .env.example  pyproject.toml
backend/app/: __init__.py
backend/app/core/: database.py  error_tracking.py  openapi.py  services.py  settings.py
backend/app/plugins/: openapi.py
backend/migrations/: env.py
backend/services/auth/: __init__.py  api.py  models.py  plugin.py  services.py
backend/services/healthcheck/: __init__.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: app.css  root.tsx  routes.ts
frontend/app/routes/: example.tsx  login.tsx
frontend/app/styles/: app.css
{{cookiecutter.project__slug}}/frontend/app/routes/: example.tsx  home.tsx  login.tsx
{{cookiecutter.pypi_package_name}}/app/plugins/: error_tracking.py
{{cookiecutter.pypi_package_name}}/backend/: .env.example  alembic.ini  pyproject.toml
{{cookiecutter.pypi_package_name}}/backend/app/: __init__.py
{{cookiecutter.pypi_package_name}}/backend/app/plugins/: settings.py
{{cookiecutter.pypi_package_name}}/backend/migrations/: env.py
{{cookiecutter.pypi_package_name}}/backend/migrations/versions/: e8e15fd7cd07_auth.py
{{cookiecutter.pypi_package_name}}/frontend/: biome.json
{{cookiecutter.pypi_package_name}}/frontend/app/: routes.ts
{{cookiecutter.pypi_package_name}}/frontend/app/styles/: theme.css
{{project__slug}}/frontend/: package.json
{{project__slug}}/frontend/app/: root.tsx
