[project]
name = "backend-starter"
version = "1.0.0"
description = "Backend for stater template"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "advanced-alchemy>=1.4.4",
    "asyncpg>=0.30.0",
    "faker>=37.6.0",
    "litestar>=2.17.0",
    "polyfactory>=2.22.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvicorn[standart]>=0.35.0",
]

[tool.ruff]
builtins = ["_"]
line-length = 120

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.isort]
detect-same-package = true
force-sort-within-sections = true

[tool.alembic]
script_location = "%(here)s/migrations"
prepend_sys_path = ["."]

